# ResearchHarness

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_server.py  serve_openai.py
.github/workflows/: ci.yml  publish.yml  tool-availability.yml
agent_base/: __init__.py  console_utils.py  model_profiles.py  react_agent.py  session_state.py  utils.py
agent_base/prompts/: system_base.md
agent_base/tools/: README.md  custom.py  tool_extra.py  tool_file.py  tool_runtime.py  tool_web.py
api/: openai_server.py
benchmarks/: README.md
benchmarks/QA/: README.md
benchmarks/ResearchClawBench/: README.md
benchmarks/SGI-DeepResearch/: README.md  role_prompt.md
benchmarks/SGI-DryExperiment/: README.md  role_prompt.md
benchmarks/SGI-IdeaGeneration/: README.md  role_prompt.md
benchmarks/SGI-Reasoning/: README.md  role_prompt.md
benchmarks/SGI-WetExperiment/: README.md  role_prompt.md
docs/: tutorial_en.md  tutorial_zh.md
frontend/: local_server.py
frontend/static/: app.css  app.js  index.html
researchharness/: __init__.py  runtime.py
tests/: test_agent_extension_checks.py  test_benchmark_prompt_contracts.py  test_console_utils.py  test_edge_case_checks.py  test_end_to_end_glob_grep.py  test_end_to_end_multitool.py  test_end_to_end_pdf_image.py  test_end_to_end_terminal.py  test_end_to_end_write_edit.py  test_extra_tools.py  test_frontend_checks.py  test_local_tools_validation.py  test_openai_api_checks.py  test_python_api_tools.py  test_sgi_benchmark_readmes.py  test_support.py  test_token_counting.py  test_tool_availability.py  test_toolchain_validation.py
